simple_association.xml

--- a/res/layout/simple_association.xml
+++ b/res/layout/simple_association.xml
@@ -65,277 +65,17 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:text="Seguent" />
-        
+
     <LinearLayout
-        android:id="@+id/LinearLayout1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@id/reintentar"
         android:layout_below="@id/sound"
         android:layout_toLeftOf="@id/seguent"
         android:layout_toRightOf="@id/anterior"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:scrollbars="vertical" >
-
-        <LinearLayout
-            android:id="@+id/linearLayoutCentral"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TableLayout
-                android:id="@+id/tl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow android:id="@+id/tr1" >
-
-                    <TextView
-                        android:id="@+id/pos1"
-                        android:layout_margin="2dip" 
-                        android:text=""/>
-
-                    <TextView
-                        android:id="@+id/pos2"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos3"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos4"
-                        android:layout_margin="2dip" />
-                </TableRow>
-            </TableLayout>
-
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow android:id="@+id/tr2" >
-
-                    <TextView
-                        android:id="@+id/pos5"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos6"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos7"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos8"
-                        android:layout_margin="2dip" />
-                </TableRow>
-            </TableLayout>
-
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow android:id="@+id/tr3" >
-
-                    <TextView
-                        android:id="@+id/pos9"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos10"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos11"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos12"
-                        android:layout_margin="2dip" />
-                </TableRow>
-            </TableLayout>
-
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow android:id="@+id/tr4" >
-
-                    <TextView
-                        android:id="@+id/pos13"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos14"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos15"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos16"
-                        android:layout_margin="2dip" />
-                </TableRow>
-            </TableLayout>
-
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow android:id="@+id/tr5" >
-
-                    <TextView
-                        android:id="@+id/pos17"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos18"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos19"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos20"
-                        android:layout_margin="2dip" />
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TableLayout
-                android:id="@+id/tl2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow android:id="@+id/tr6" >
-
-                    <TextView
-                        android:id="@+id/pos21"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos22"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos23"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos24"
-                        android:layout_margin="2dip" />
-                </TableRow>
-            </TableLayout>
-
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow android:id="@+id/tr7" >
-
-                    <TextView
-                        android:id="@+id/pos25"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos26"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos27"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos28"
-                        android:layout_margin="2dip" />
-                </TableRow>
-            </TableLayout>
-
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow android:id="@+id/tr8" >
-
-                    <TextView
-                        android:id="@+id/pos29"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos30"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos31"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos32"
-                        android:layout_margin="2dip" />
-                </TableRow>
-            </TableLayout>
-
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow android:id="@+id/tr9" >
-
-                    <TextView
-                        android:id="@+id/pos33"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos34"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos35"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos36"
-                        android:layout_margin="2dip" />
-                </TableRow>
-            </TableLayout>
-
-            <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <TableRow android:id="@+id/tr10" >
-
-                    <TextView
-                        android:id="@+id/pos37"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos38"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos39"
-                        android:layout_margin="2dip" />
-
-                    <TextView
-                        android:id="@+id/pos40"
-                        android:layout_margin="2dip" />
-                </TableRow>
-            </TableLayout>
-        </LinearLayout>
-
     </LinearLayout>
 
     <TextView
