--- a/res/layout/double_puzzle.xml
+++ b/res/layout/double_puzzle.xml
@@ -4,124 +4,131 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     android:id="@+id/ll"
-	android:gravity="center_horizontal|center_vertical">
+	android:gravity="center_horizontal|center_vertical|top">
     
-	<LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
+	
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#7777"
-            android:gravity="top" >
+     <LinearLayout
+         android:layout_width="fill_parent"
+         android:layout_height="wrap_content"
+         android:background="#7777"
+         android:gravity="top" >
 
-            <Button
-                android:id="@+id/menu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Menu" />
+         <Button
+             android:id="@+id/menu"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="Menu" />
 
-            <RelativeLayout
-                android:layout_width="162dp"
-                android:layout_height="match_parent" >
+         <RelativeLayout
+             android:layout_width="162dp"
+             android:layout_height="match_parent" >
 
-                <TextView
-                    android:id="@+id/titulo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:text="Small Text"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+             <TextView
+                 android:id="@+id/titulo"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_centerHorizontal="true"
+                 android:layout_centerVertical="true"
+                 android:text="Small Text"
+                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
-            </RelativeLayout>
+         </RelativeLayout>
 
-            <TextView
-                android:id="@+id/aciertos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="aciertos"
-                android:maxLines="1"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+         <TextView
+             android:id="@+id/aciertos"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="aciertos"
+             android:maxLines="1"
+             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-            <EditText
-                android:id="@+id/editAciertos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:clickable="false"
-                android:editable="false"
-                android:ems="10"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:height="@android:dimen/thumbnail_height"
-                android:minWidth="80sp"
-                android:maxWidth="80sp"
-                android:inputType="number"
-                android:linksClickable="false">
+         <TextView
+             android:id="@+id/editAciertos"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_weight="1"
+             android:background="#FFFFFFFF"
+             android:clickable="false"
+             android:editable="false"
+             android:ems="10"
+             android:focusable="false"
+             android:focusableInTouchMode="false"
+             android:height="@android:dimen/thumbnail_height"
+             android:inputType="number"
+             android:linksClickable="false"
+             android:maxWidth="80sp"
+             android:minWidth="80sp" 
+             android:textColor="#000000"
+             android:gravity="center" >
 
-                <requestFocus />
-            </EditText>
+             <requestFocus />
+         </TextView>
 
-            <TextView
-                android:id="@+id/intentos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="intentos"
-                android:maxLines="1"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+         <TextView
+             android:id="@+id/intentos"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="intentos"
+             android:maxLines="1"
+             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-            <EditText
-                android:id="@+id/editIntentos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:clickable="false"
-                android:editable="false"
-                android:ems="10"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="number" 
-                android:minWidth="80sp"
-                android:maxWidth="80sp"/>
+         <TextView
+             android:id="@+id/editIntentos"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_weight="1"
+             android:clickable="false"
+             android:editable="false"
+             android:ems="10"
+             android:focusable="false"
+             android:focusableInTouchMode="false"
+             android:background="#FFFFFFFF"
+             android:inputType="number" 
+             android:minWidth="80sp"
+             android:maxWidth="80sp"
+             android:textColor="#000000" 
+             android:gravity="center"/>
 
-            <TextView
-                android:id="@+id/tiempo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="tiempo"
-                android:maxLines="1"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+         <TextView
+             android:id="@+id/tiempo"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="tiempo"
+             android:maxLines="1"
+             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-            <EditText
-                android:id="@+id/editTiempo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:clickable="false"
-                android:editable="false"
-                android:ems="10"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="number" 
-                android:minWidth="80sp"
-                android:maxWidth="80sp"/>
+         <TextView
+             android:id="@+id/editTiempo"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_weight="1"
+             android:clickable="false"
+             android:editable="false"
+             android:ems="10"
+             android:focusable="false"
+             android:focusableInTouchMode="false"
+			 android:background="#FFFFFFFF"
+             android:inputType="number" 
+             android:minWidth="80sp"
+             android:maxWidth="80sp"
+             android:textColor="#000000" 
+             android:gravity="center"/>
 
-        </LinearLayout>
-
-    </LinearLayout>
-  
+     </LinearLayout>
 <!-- Taula entrada -->
+
 	<LinearLayout
-		    android:orientation="horizontal"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content">	
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:gravity="center"
+	    android:orientation="horizontal" >
+	
 		<LinearLayout
-		    android:orientation="vertical"
 		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content">
+		    android:layout_height="wrap_content"
+		    android:gravity="left"
+		    android:orientation="vertical" >
 
 			<TableLayout
 				android:id="@+id/tl"
@@ -234,15 +241,6 @@
 			    	android:layout_width="wrap_content"
 					android:layout_height="wrap_content">
 
-			    	<ImageView 
-						android:id="@+id/bdown"
-						android:src="@drawable/icon_down"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content" 
-						android:layout_marginLeft="15dip"  
-						android:layout_marginTop="10dip"
-						android:layout_marginRight="10dip"/>
-
 			    	<LinearLayout android:orientation="vertical"
 					    android:layout_width="wrap_content"
 					    android:layout_height="wrap_content">
@@ -279,10 +277,13 @@
 		</LinearLayout>
 
 <!-- Taula resultat -->
+
 		<LinearLayout
-		    android:orientation="vertical"
 		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content">
+		    android:layout_height="wrap_content"
+		    android:gravity="right"
+		    android:orientation="vertical" >
+
 			<TableLayout
 				android:id="@+id/tl2"
 			    android:layout_width="wrap_content"
@@ -394,15 +395,6 @@
 			    	android:layout_width="wrap_content"
 					android:layout_height="wrap_content">
 
-			    	<ImageView 
-						android:id="@+id/bup"
-						android:src="@drawable/icon_up"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content" 
-						android:layout_marginLeft="15dip"  
-						android:layout_marginTop="10dip"
-						android:layout_marginRight="10dip"/>
-
 			    	<LinearLayout android:orientation="vertical"
 					    android:layout_width="wrap_content"
 					    android:layout_height="wrap_content">
@@ -438,9 +430,4 @@
 			</TableLayout>
 		</LinearLayout>
 	</LinearLayout>
-    <ScrollView
-		android:id="@+id/sv"
-	    android:layout_width="wrap_content"
-	   	android:layout_height="wrap_content" >
-	</ScrollView>
 </LinearLayout>
