--- a/res/layout/exchange_hole_puzzle.xml
+++ b/res/layout/exchange_hole_puzzle.xml
@@ -4,115 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
     android:id="@+id/ll"
-	android:gravity="center_horizontal|center_vertical">
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#7777"
-            android:gravity="top" >
-
-            <Button
-                android:id="@+id/menu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Menu" />
-
-            <RelativeLayout
-                android:layout_width="125dp"
-                android:layout_height="match_parent" >
-
-                <TextView
-                    android:id="@+id/titulo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:text="Small Text"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/aciertos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="aciertos"
-                android:maxLines="1"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <EditText
-                android:id="@+id/editAciertos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:clickable="false"
-                android:editable="false"
-                android:ems="10"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:height="@android:dimen/thumbnail_height"
-                android:minWidth="80sp"
-                android:maxWidth="80sp"
-                android:inputType="number"
-                android:linksClickable="false">
-
-                <requestFocus />
-            </EditText>
-
-            <TextView
-                android:id="@+id/intentos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="intentos"
-                android:maxLines="1"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <EditText
-                android:id="@+id/editIntentos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:clickable="false"
-                android:editable="false"
-                android:ems="10"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="number" 
-                android:minWidth="80sp"
-                android:maxWidth="80sp"/>
-
-            <TextView
-                android:id="@+id/tiempo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="tiempo"
-                android:maxLines="1"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <RelativeLayout
-                android:layout_height="match_parent"
-                android:layout_width="100dp" >
-
-                <ProgressBar
-                    android:id="@+id/progressTime"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true" />
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-    
+	android:gravity="center_horizontal|center_vertical|top">
+	<include android:id="@+id/barra_top" layout="@layout/barra_menu" />
 	<TableLayout
 		android:id="@+id/tl"
 	    android:layout_width="wrap_content"
@@ -223,17 +116,6 @@
             android:layout_height="wrap_content"
             android:maxLength="35"
             android:id="@+id/missatge"
-            android:textStyle="bold"/>
-	</LinearLayout>
-	
-	<LinearLayout android:orientation="horizontal"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content" >
-	    
-		<TextView android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLength="35"
-            android:id="@+id/correcte"
             android:textStyle="bold"/>
 	</LinearLayout>
 	
