--- a/res/layout/puzzleprueva.xml
+++ b/res/layout/puzzleprueva.xml
@@ -33,9 +33,7 @@
             android:id="@+id/scrollView1"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent" 
-            android:layout_weight="10">
-        </ScrollView>
-
+            android:layout_weight="10" />
         <Button
             android:id="@+id/button4"
             android:layout_width="wrap_content"
