--- a/res/layout/menu_clic.xml
+++ b/res/layout/menu_clic.xml
@@ -9,7 +9,8 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="2"
-            android:gravity="center" >
+            android:gravity="center" 
+            android:id= "@+id/bSuperiores">
 
             <LinearLayout
                 android:layout_width="wrap_content"
