--- a/res/layout/element_clic.xml
+++ b/res/layout/element_clic.xml
@@ -9,8 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:paddingRight="10dp"
-        android:src="@drawable/icon_example" />
+        android:paddingRight="10dp" />
 
     <TextView
         android:id="@+id/titulo"
