--- a/res/layout/test.xml
+++ b/res/layout/test.xml
@@ -9,13 +9,15 @@
         android:layout_height="match_parent"
         android:layout_weight="0.91"
         android:orientation="vertical" >
-
+
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="105dp"
             android:layout_weight="0.02"
             android:orientation="horizontal" >
-
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -23,13 +25,15 @@
                 android:gravity="center"
                 android:orientation="vertical" 
                 android:layout_gravity="center">
-
+
+
                 <ImageButton
                     android:id="@+id/bLlibreria"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/ico_libreriab"/>
-
+                    android:layout_height="wrap_content" />
+<!--                     android:background="@drawable/ico_libreriab"/>-->
+
+
                 <TextView
                     android:id="@+id/tvLlibreria"
                     android:layout_width="wrap_content"
@@ -38,7 +42,10 @@
                     android:text="TextView" />
 
             </LinearLayout>
-
+
+
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -51,7 +58,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ico_categoria" />
-
+
+
+
                 <TextView
                     android:id="@+id/tvCategoria"
                     android:layout_width="wrap_content"
@@ -60,7 +69,10 @@
                     android:text="TextView" />
 
             </LinearLayout>
-
+
+
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -73,7 +85,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ico_edad" />
-
+
+
+
                 <TextView
                     android:id="@+id/tvEdat"
                     android:layout_width="wrap_content"
@@ -82,7 +96,11 @@
                     android:text="TextView" />
 
             </LinearLayout>
-
+
+
+
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -95,7 +113,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ico_idioma"/>
-
+
+
+
+
                 <TextView
                     android:id="@+id/tvIdioma"
                     android:layout_width="wrap_content"
@@ -105,13 +126,28 @@
 
             </LinearLayout>
         </LinearLayout>
-
+
+
+
+
+
+
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="6.10"
             android:layout_margin="10dp" 
             >
+            
+            <ScrollView
+		    android:id="@+id/SCROLLER_ID"
+		    android:layout_width="fill_parent"
+		    android:layout_height="wrap_content"
+		    android:scrollbars="vertical"
+		    android:fillViewport="true">
+		            
 			
             <TextView
                 android:id="@+id/tvDescripcio"
@@ -119,17 +155,22 @@
                 android:layout_height="wrap_content"
                 android:text="TextView" 
                 android:textSize="20dp"
+                android:scrollbars="vertical"
                 />
-
+		 </ScrollView>
+		 
         </LinearLayout>
     </LinearLayout>
-
+
+
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.97"
         android:orientation="vertical" >
-
+
+
         <include
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
