--- a/res/layout/textorder.xml
+++ b/res/layout/textorder.xml
@@ -135,7 +135,7 @@
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="Ok" />
     </LinearLayout>
 
 </LinearLayout>
